Changed NODE_ENV from test to local.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-editor-backend",
+  "name": "jsramverk-editor-backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
