--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./app.js"
+    "start": "node ./app.js",
+    "test": "nyc --reporter=html --reporter=text mocha 'tests/**/*.js'"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -12,5 +13,11 @@
     "express": "~4.16.1",
     "mongodb": "^4.9.1",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0"
   }
 }
