Try with --exit.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./app.js",
-    "test": "nyc --reporter=html --reporter=text --reporter=clover mocha --timeout 10000"
+    "test": "nyc --reporter=html --reporter=text --reporter=clover mocha --timeout 10000 --exit"
   },
   "dependencies": {
     "cors": "^2.8.5",
