--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "scripts": {
     "start": "node ./app.js",
+    "watch": "nodemon ./app.js",
     "test": "nyc --reporter=html --reporter=text --reporter=clover mocha --timeout 10000 --exit"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.1",
     "morgan": "~1.9.1",
     "socket.io": "^4.5.2"
