--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "nyc --reporter=html --reporter=text --reporter=clover mocha --timeout 10000 --exit"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
