--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./app.js",
     "watch": "nodemon ./app.js",
-    "test": "nyc --reporter=html --reporter=text --reporter=clover mocha --timeout 10000 --exit"
+    "test": "set NODE_ENV=test&& nyc --reporter=html --reporter=text --reporter=clover mocha --timeout 10000 --exit"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
@@ -30,5 +30,12 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.6",
     "utf-8-validate": "^5.0.9"
+  },
+  "nyc": {
+    "exclude": [
+      "config/middleware.js",
+      "graphql",
+      "app.js"
+    ]
   }
 }
